2005-03-17  Richard Hoelscher  <rah@rahga.com>

	* glines.c (create_menus): Use GtkUIManager API for menus.
	(move_timeout_changed_cb): Prefs checkbox watches gconf change.
	(refresh_pixmaps): Warnings on render error.
	(show_image_warning): New theme warning dialog.
	(main): Remove an unused hbox from the first revision.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/glines.xml: Bump the app version number. No revisions.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* glines.c (load_image): Preimage API update, uri -> file. 

2004-12-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Patch from Marco Colombo to remove more hard-coded
	constants. Another step towards feature request #83532.

2004-12-13  Callum McKenzie  <callum@physics.otago.ac.nz>

        * glines.c: Some code cleanups. This includes some unnecessary 
	arithmetic that may have been the source of Marco's corruption
	bug. Removed another cryptic Hungarian comment, the issue in 
	question has been fixed.
	
	* glines.c:	
	* glines.h: Patch from Marco Colombo <m.colombo@ed.ac.uk> to
	decouple the width and height of the grid. A first step towards
	feature request #83532.

2004-12-07  Richard Hoelscher  <rah@rahga.com>
 
 	* glines.c (field_expose_event): Keyboard cursor now black or 
 	white, depending on average value of background color RGB channels.
 	(refresh_pixmaps): When theme refuses to render, use a blank pixbuf.
 
2004-11-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (main): Alan Horkan's incredibly complicated patch to
	eliminate a semantic difficulty in the preview labelling.

2004-11-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/glines.xml: Explain how to use the keyboard.

	* glines.c: Apply a keyboard-control patch from Anton
	Gavrilov. Also removed the cryptic /* XXX Ezt megkapja */ comment
	(it is Hungarian for 'it gets this one', I have never understood
	it).
